chore(java): migrate from Java 8 to Java 17
Migrated from Java 8 to Java 17 using Moderne CLI with the OpenRewrite recipe org.openrewrite.java.migrate.UpgradeToJava17.

Changes:
- Updated Maven compiler plugin to 3.14.1 with release 17
- Replaced Paths.get() with Path.of() (Java 11+ API)
- Replaced String.format() with .formatted() method (Java 15+ API)
- Updated Mockito from mockito-all 1.10.19 to mockito-core 4.11.0 for Java 17 compatibility

Co-authored-by: Ona <no-reply@ona.com>